2020-08-05  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryService.java:
	Added product parameter to sole constructor.  Added getService()
	and msearch(int,URI) methods.

2020-07-31  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/SSDP.java:
	Added getUSNMap() and getUSN(URI) interface methods and static
	matches(URI,URI) and matches(URI) methods to compare NT to STs.
	Added the corresponding implementations in the class hierarchy.

2020-07-30  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/SSDP.java:
	Initial writing.  Common interface in Device and Service hierarchy
	to support UPnP Discovery.  Implemented methods in subclasses.

2020-07-29  Allen D. Ball  <ball@hcf.dev>

	* Added <ssdp-m-search/> Ant Task and build target.

2020-07-28  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryService.java:
	Added send(int,SocketAddress,List<? extends SSDPMessage>) to honor
	requestor's MX parameter.

	* src/main/java/ball/upnp/Device.java,
	src/main/java/ball/upnp/AbstractDevice.java:
	Added getUSNs() method.

2020-07-27  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/RootDevice.java: Initial writing.

2020-07-26  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryCache.java:
	Created RequestHandler and ResponseHandler instances to handle
	NOTIFY requests and M-SEARCH responses, respectively.

	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryService.java:
	Added register(SSDPDiscoveryService) and
	unregister(SSDPDiscoveryService) methods to Listener interface.
	Added abstract (inner) RequestHandler and ResponseHandler base
	classes.

	* Replaced SSDPMessage class hierarchy with SSDPRequest and
	SSDPResponse factory methods.

2020-07-25  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryService.java:
	Added DatagramSocket parameter to Listener methods.
	Added delay parameter to multicast and send methods.
